--- a/src/output.css
+++ b/src/output.css
@@ -961,6 +961,11 @@ video {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
+.bg-\[rgb\(76\2c 59\2c 207\)\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(76 59 207 / var(--tw-bg-opacity));
+}
+
 .bg-cover {
   background-size: cover;
 }
@@ -1040,6 +1045,10 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .text-justify {
